<resources>
    <string name="app_name">PI3-ES-2024-TIME-25</string>
    <string name="logo_lock_n_go">Logo Lock\'N\'Go</string>
    <string name="email_login">Email</string>
    <string name="senha_login">Senha</string>
    <string name="esqueceu_sua_senha">Esqueceu sua senha?</string>
    <string name="btn_login">Entrar</string>
    <string name="register_login">Não tem uma conta? Registre-se aqui.</string>
    <string name="onde_estao_armarios">Onde estão os armários?</string>
    <string name="nome_registro">Seu nome completo</string>
    <string name="CPF_registro">Seu CPF</string>
    <string name="dataNascimento_registro">Data de nascimento</string>
    <string name="telefone_registro">Número de telefone</string>
    <string name="continuar_registro">Continuar</string>
    <string name="voltar_registro1">Voltar</string>
    <string name="email_registro">Email</string>
    <string name="senha_registro">Senha</string>
    <string name="confirmaSenha_registro">Confirme sua senha</string>
    <string name="registrar">Registrar</string>
    <string name="recuperar_senha">Recuperar</string>
    <string name="texto_recovery">Um e-mail será enviado para recuperar sua senha</string>
    <string name="voltar_recovery">Voltar</string>
    <string name="texto_modal_recovery">Um e-mail foi enviado para você. Verifique sua caixa de entrada!</string>
    <string name="selo_concluido_recovery_modal">Selo de concluído com sucesso</string>
    <string name="button_ok_modal">Ok</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="edNumeroCartao">Número do cartão</string>
    <string name="edCVV">Código de segurança (CVV)</string>
    <string name="edVencimento">Data de nascimento (MM/AA)</string>
    <string name="tvAddCartao">Adicione seu cartão de crédito</string>
    <string name="title_activity_qrcode_generator">QRCodeGeneratorActivity</string>
    <string name="apresentar_qr_code">Apresente o QR Code ao gerente</string>
    <string name="nome_do_gerente">(Nome do gerente)</string>
    <string name="vencimento_do_cart_o">Vencimento do cartão</string>
    <string name="manager_name">(%1$s)</string>
    <string name="button_rent_locker">Alugar armário</string>
    <string name="button_add_credit_card">Adicionar cartão de crédito</string>
    <string name="button_login_to_rent">Quero alugar um armário</string>
    <string name="dialog_title_login_required">Para alugar um armário, é necessário fazer login</string>
    <string name="dialog_message_login_required">Faça login ou crie uma conta para alugar um armário.</string>
    <string name="dialog_button_ok">OK</string>
    <string name="select_locker">Selecione um armário</string>

    <string name="photo">Tirar Foto</string>
    <string name="open_camera">Abrir Camera</string>
    <string name="save_photo">Salvar Foto</string>
    <string name="release">Liberar Locação</string>
    <string name="cancelar">Cancelar</string>
    <string name="prox_person">Tire a foto da próxima pessoa.</string>

    <string name="option_text_format">%s - %s</string>
    <string name="text_qrcode_gerente"> Aproxime o smartphone de uma pulseira  ou escaneie um  QR code, basta pressionar “Liberar locação” .</string>
    <string name="liberar_locacao"> Liberar locação </string>
    <string name="cancel">Cancelar</string>
    <string name="label_write_tag">Aproxime o smartphone de uma pulseira e aperte o botão “Escrever Tag”.</string>
    <string name="finish_write_tag">Finalizar</string>
    <string name="nfc_message">Conteúdo da tag NFC é exibido aqui</string>
    <string name="finished_rent_process">Locação concluída!</string>
    <string name="locker_name">Armário:</string>
    <string name="return_home">Retornar para o início</string>
    <string name="write_tag">Escrever Tag</string>

</resources>