<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center_vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">


    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="301dp"
        android:layout_height="108dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logo_lock_n_go"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toTopOf="@+id/topGuideLine"
        app:srcCompat="@drawable/logo4x" />

    <EditText
        android:id="@+id/email_login"
        android:layout_width="0dp"
        android:layout_height="65sp"
        android:layout_marginTop="32dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/email_login"
        android:inputType="textEmailAddress"
        android:paddingStart="20sp"
        android:paddingEnd="20sp"
        android:textColor="@color/white"
        android:textColorHint="#C7CECB"
        android:textSize="16sp"
        android:fontFamily="@font/inter_medium"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/logo_login" />

    <EditText
        android:id="@+id/senha_login"
        android:layout_width="0dp"
        android:layout_height="65sp"
        android:layout_marginTop="16dp"
        android:autofillHints="password"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/senha_login"
        android:inputType="textPassword"
        android:paddingStart="20sp"
        android:paddingEnd="20sp"
        android:textColor="@color/white"
        android:textColorHint="#C7CECB"
        android:textSize="16sp"
        android:fontFamily="@font/inter_medium"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/email_login" />

    <TextView
        android:id="@+id/esqueceu_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/esqueceu_sua_senha"
        android:textColor="#7D8392"
        android:textSize="14sp"
        android:fontFamily="@font/inter_bold"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintTop_toBottomOf="@+id/senha_login" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="65sp"
        android:layout_marginTop="8dp"
        android:background="@drawable/border"
        android:text="@string/btn_login"
        android:textColor="#7D8392"
        android:textSize="16sp"
        android:fontFamily="@font/inter_bold"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/esqueceu_senha" />


    <TextView
        android:id="@+id/registrar_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/register_login"
        android:textColor="#7D8392"
        android:textSize="14sp"
        android:fontFamily="@font/inter_bold"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/location_armarios_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:text="@string/onde_estao_armarios"
        android:textColor="#7D8392"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/registrar_login" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideLine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.94" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>