<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RecoveryActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <TextView
        android:id="@+id/textoRecovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/texto_recovery"
        android:textColor="#7D8392"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/email_recovery"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/logo_recovery" />

    <ImageView
        android:id="@+id/logo_recovery"
        android:layout_width="0dp"
        android:layout_height="108dp"
        android:contentDescription="@string/logo_lock_n_go"
        app:layout_constraintBottom_toTopOf="@+id/textoRecovery"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/logo4x" />

    <EditText
        android:id="@+id/email_recovery"
        android:layout_width="0dp"
        android:layout_height="65sp"
        android:layout_marginTop="16dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/email_login"
        android:inputType="textEmailAddress"
        android:paddingStart="20sp"
        android:paddingEnd="20sp"
        android:textColor="@color/white"
        android:textColorHint="#C7CECB"
        app:layout_constraintBottom_toTopOf="@+id/btn_recovery"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textoRecovery" />

    <Button
        android:id="@+id/btn_recovery"
        android:layout_width="0dp"
        android:layout_height="65sp"
        android:layout_marginTop="16dp"
        android:background="@drawable/primary_background_btn"
        android:text="@string/recuperar_senha"
        android:textAllCaps="false"
        android:textColor="#7D8392"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/email_recovery" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <ImageButton
        android:id="@+id/voltar_recovery"
        android:layout_width="103sp"
        android:layout_height="59sp"
        android:background="@color/black"
        android:contentDescription="@string/voltar_recovery"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/botao_voltar" />


</androidx.constraintlayout.widget.ConstraintLayout>