<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:fitsSystemWindows="true"
    tools:context=".WriteTagActivity">


    <ImageView
        android:id="@+id/logoLockngo"
        android:layout_width="123dp"
        android:layout_height="108dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="l"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/rightGuidelineWriteTag"
        app:layout_constraintStart_toStartOf="@+id/leftGuideLineWriteTag"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/logo4x" />

    <TextView
        android:id="@+id/tv_nfc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nfc_message"
        android:textColor="#D9D9D9"
        app:layout_constraintBottom_toTopOf="@+id/btnFinishOrNextPerson"
        app:layout_constraintEnd_toStartOf="@+id/rightGuidelineWriteTag"
        app:layout_constraintStart_toStartOf="@+id/leftGuideLineWriteTag"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/inter_medium"
        android:gravity="center"
        android:text="@string/label_write_tag"
        android:textColor="#D9D9D9"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_nfc"
        app:layout_constraintEnd_toStartOf="@+id/rightGuidelineWriteTag"
        app:layout_constraintStart_toStartOf="@+id/leftGuideLineWriteTag"
        app:layout_constraintTop_toBottomOf="@+id/logoLockngo" />

    <Button
        android:id="@+id/btnFinishOrNextPerson"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/primary_background_btn"
        android:fontFamily="@font/inter_bold"
        android:text="@string/finish_write_tag"
        android:textAllCaps="false"
        android:textColor="#7D8392"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rightGuidelineWriteTag"
        app:layout_constraintStart_toStartOf="@+id/leftGuideLineWriteTag" />

    <Button
        android:id="@+id/btnWriteTag"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/primary_background_btn"
        android:fontFamily="@font/inter_bold"
        android:text="@string/write_tag"
        android:textAllCaps="false"
        android:textColor="#7D8392"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnFinishOrNextPerson"
        app:layout_constraintEnd_toStartOf="@+id/rightGuidelineWriteTag"
        app:layout_constraintStart_toStartOf="@+id/leftGuideLineWriteTag" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideLineWriteTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuidelineWriteTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>